--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/styled-components": "^5.1.7",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.20.0",
     "git-cz": "^4.7.6",
     "prettier": "2.2.1",
     "typescript": "^4.1.5"
@@ -42,6 +45,28 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "rules": {
+      "@typescript-eslint/no-redeclare": 0,
+      "react/jsx-curly-brace-presence": [
+        "warn"
+      ],
+      "arrow-body-style": [
+        "error",
+        "as-needed"
+      ],
+      "no-console": [
+        "warn",
+        {
+          "allow": [
+            "warn",
+            "error"
+          ]
+        }
+      ]
     }
   }
 }
