refactor: 💡 add basic page structure

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "tsc": "tsc  --watch --preserveWatchOutput",
     "cz": "git-cz"
   },
   "config": {
