--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-image": "^0.7.1",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-offline": "^3.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
